--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@tanstack/react-query": "^5.90.12",
     "axios": "^1.13.2",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.3",
+    "react-hot-toast": "^2.6.0",
+    "react-paginate": "^8.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
